--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,7 @@
 <% @tasks.each do |task| %>
   <h2><%= task.name %></h2>
+  <h2><%= link_to task.name, task_path(task) %></h2>
   <p><%= task.description %></p>
   <p><%= task.due_date %></p>
+  <p><%= link_to "Delete", task_path(task), method: :delete %></p>
 <% end %>
